# pytest-ensure-tests-fail

./: LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
pytest_ensure_tests_fail/: __init__.py  example.py  plugin.py
tests/: test_e2e.py  test_example.py  test_plugin.py
tests/sample_project/: calculator.py  calculator_fixed.py  test_calculator.py
