[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytest-ensure-tests-fail"
version = "0.1.0"
description = "A pytest plugin to ensure new tests actually fix issues by verifying they fail on upstream"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Chad Crawford", email = "chad@cacrawford.org" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "pytest>=7.0.0",
]

[project.entry-points.pytest11]
ensure_tests_fail = "pytest_ensure_tests_fail.plugin"

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
